2005/03/07	kaffeetisch

	* Glib.pm, Makefile.PL, META.yml, NEWS, README: Stable release
	1.080.

2005/03/06	kaffeetisch

	* GBoxed.xs: Fix a typo.

2005/02/28	kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/15 15:48 (-0500) rwmcfa1

	* GMainLoop.xs: likely type-o on Glib::MainLoop->new causing ref count
	to start out at 2 and thus main loops never die, should of been unref.

2005/02/07 23:40 (-0500) muppetman

	* Glib.pm, NEWS, README: Unstable release 1.073

2005/02/07 23:30 (-0500) muppetman

	* t/9.t: Disable the async signal test on win32.

2005/02/07 23:20 (-0500) muppetman

	* GSignal.xs, gperl.h, Glib.exports: Bind and document g_signal_query
	as Glib::Object::signal_query.  Add newSVGSignalQuery to marshal a
	GSignalQuery to perl.

	* GType.xs: Move guts of list_signals to newSVGSignalQuery, and call
	that function instead.

	M MANIFEST
	A t/signal_query.t: New test for signal_query and list_signals.

2005/02/07 23:20 (-0500) muppetman

	* GLog.xs: Call abort() rather than croak() on G_LOG_LEVEL_ERROR
	messages.  croak()ing didn't do anything useful, and abort()ing
	allows you to stop gdb on an error and get a backtrace.

2005/02/04 22:36 (-0500) muppetman

	* MakeHelper.pm: (select_files_by_version) do not escape . in glob
	patterns; it is unnecessary on unix and win32 thinks the \ is a path
	separator.  This one-character change fixes an intermittent win32
	build problem.

2005/01/29 21:22 (-0500) muppetman

	* ParseXSDoc.pm: better handling for xsubs with continuation lines.

2005/01/29 13:45 (-0500) muppetman

	* copyright.pod: update for the new year.

2005/01/29 01:38 (-0500) muppetman

	* GBoxed.xs, GenPod.pm: implement support for the boxed type GStrv
	as a native perl anonymous array of strings

2005/01/25 23:34 (-0500) rwmcfa1

	* t/c.t: remove [] around test 12. caused failures on newer
	Test::More's

2005/01/09 23:50 (-0400) muppetman

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.072
